--- a/.gitignore
+++ b/.gitignore
@@ -98,7 +98,7 @@ InitTestScene*.unity*
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 
-# === [강사님 추천: 유니티/IDE 프로젝트 파일] ===
+# === [유니티/IDE 프로젝트 파일] ===
 *.DotSettings
 *.csproj
 *.pidb
@@ -113,8 +113,8 @@ InitTestScene*.unity*
 /Temp/
 /obj/
 
-# === [하샘님 연구 특화: 데이터 및 로그 보호] ===
-# 하샘님의 통계적 풀링(ASP) 연구 과정에서 생성되는 대용량 데이터 보호
+# === [데이터 및 로그 보호] ===
+# 통계적 풀링(ASP) 연구 과정에서 생성되는 대용량 데이터 보호
 /[Aa]ssets/StreamingAssets/Logs/
 /[Aa]ssets/DataDump/
 *.log
