--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.onnx filter=lfs diff=lfs merge=lfs -text
+# 특정 폴더나 파일 확장자를 언어 통계에서 제외(Vendored) 처리
+UnityProject/** linguist-vendored
+*.asset linguist-vendored
+*.unity linguist-vendored
+*.mat linguist-vendored
