--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,12 @@
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.onnx filter=lfs diff=lfs merge=lfs -text
-# 특정 폴더나 파일 확장자를 언어 통계에서 제외(Vendored) 처리
-UnityProject/** linguist-vendored
+# 1. Wolfram Language로 오해받는 데이터 파일들만 통계에서 제외
 *.asset linguist-vendored
 *.unity linguist-vendored
 *.mat linguist-vendored
+*.meta linguist-vendored
+*.prefab linguist-vendored
+
+# 2. (중요) 유니티 내의 C# 코드는 명확하게 통계에 포함
+**/*.cs linguist-detectable
